Update .gitignore to exclude test files and enhance README with local Prism.js setup instructions

--- a/index.html
+++ b/index.html
@@ -112,5 +112,11 @@
 			type="module"
 			src="js/main.js"
 		></script>
-	</body>
+
+		<!-- Local Prism.js Files (Commented out - Use CDN by default, see README.md if you want to run without local server) -->
+		<!--
+		<link rel="stylesheet" href="lib/prismjs/prism-tomorrow.min.css" />
+		<script src="lib/prismjs/prism-core.min.js"></script>
+		<script src="lib/prismjs/prism-autoloader.min.js" data-dependencies-path="lib/prismjs/"></script>
+		--></body>
 </html>
